syntax = "proto3";

package storage;

option go_package = "./pkg/storage/pb";

service StorageService {
  rpc CreateEntity(CreateEntityRequest) returns (CreateEntityResponse) {}
  //rpc FindOne(FindOneRequest) returns (FindOneResponse) {}
}

// CreateEntity

message CreateEntityRequest {
  string identifier = 1;
  int64 typeID = 2;
  oneof entity {
    Account account = 3;
    CreditCard credit_card = 4;
}
}

message CreateEntityResponse {
  int64 status = 1;
  string error = 2;
  int64 id = 3;
}

message Account{
  string login = 1;
  string password = 2;
}

message CreditCard{
  string number = 1;
  string holder_name = 2;
}
